# cprimes

./: CMakeLists.txt
bench/: CMakeLists.txt  bench-primes.c
include/: cprimes.h  cvector.h  primewheel.h  sieve.h  types.h  utils.h
include/cprimes/: cprimes.h  cvector.h  primewheel.h  sieve.h  types.h  utils.h
src/: CMakeLists.txt  cprimes.c  cvector.c  primewheel.c  sieve.c  utils.c
tests/: CMakeLists.txt  test-primes.cpp
